--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,40 @@
 version: '3'
 
 services:
-    web:
-        build:
-            context: .
-            dockerfile: docker/nginx/Dockerfile
-        ports:
-            - "8080:80"
-        volumes:
-            - .:/app/
-        links:
-            - php
+  db:
+    image: postgres:15
+    container_name: my-postgres-db
+    volumes:
+      - my_pgdata:/var/lib/postgresql/data
+      - ./docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      POSTGRES_PASSWORD: apppass
+      POSTGRES_USER: appuser
+      POSTGRES_DB: appdb
+    ports:
+      - "5432:5432"
 
-    php:
-        build:
-            context: .
-            dockerfile: docker/php/Dockerfile
-        volumes:
-            - .:/app/
+  web:
+    build:
+      context: .
+      dockerfile: docker/nginx/Dockerfile
+    ports:
+      - "8080:80"
+    volumes:
+      - .:/app/
+    links:
+      - php
+    depends_on:
+      - php
+
+  php:
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
+    volumes:
+      - .:/app/
+    depends_on:
+      - db
+
+volumes:
+  my_pgdata: { }
